[package]
name = "ws2812-esp32-rmt-driver"
version = "0.10.0-alpha.1"
license = "MIT"
authors = ["@cat_in_136"]
categories = ["embedded", "hardware-support"]
keywords = ["embedded-graphics", "esp32", "neopixel", "smart-leds", "ws2812"]
description = "WS2812 driver using ESP32 RMT"
homepage = "https://github.com/cat-in-136/ws2812-esp32-rmt-smart-leds"
readme = "README.md"
repository = "https://github.com/cat-in-136/ws2812-esp32-rmt-smart-leds"
edition = "2021"

[dependencies]
smart-leds-trait = { version = "0.3", optional = true }
embedded-graphics-core = { version = "0.4", optional = true }
heapless = "0.8"

[target.'cfg(target_vendor = "espressif")'.dependencies]
esp-idf-hal = { version = "0.44", default-features = false }
esp-idf-sys = { version = "0.35", default-features = false }

[target.'cfg(not(target_vendor = "espressif"))'.dependencies]
paste = "1"

[features]
default = ["std"]
std = [ "alloc", "esp-idf-hal/std", "esp-idf-sys/std" ]
alloc = [ "esp-idf-hal/alloc" ]

[dev-dependencies]
smart-leds = "0.4"
embedded-graphics = "0.8"

[build-dependencies]
embuild = "0.32"

[profile.release]
strip = true
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
strip = true
opt-level = "z"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
